--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</p>
 				
 				<div class="btn-box">
-					<a href="https://drive.google.com/file/d/1XaaqY0A6E8H6MaivQVDPGAeE8liBOsBd/view?usp=sharing" download="RahulCV.pdf" class="btn">Download C</a>
+					<a href="https://drive.google.com/file/d/1XaaqY0A6E8H6MaivQVDPGAeE8liBOsBd/view?usp=sharing" download="RahulCV.pdf" class="btn">Download CV</a>
 					<a href="https://www.linkedin.com/in/rahul-singh-87675a221/?msg=1 " target="_blank" class="btn">Let's Talk</a>
 				</div>
 			</div>
