updated projcts section

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 			<div class="home-content">
 				<h1 >Hi, I'm <span>Rahul Singh</span></h1>
 				<div class="text-animate">
-					<h3>Frontend Developer</h3>
+					<h3>Full Stack Developer</h3>
 				</div>
 				<p>Passionate Frontend Developer and current Bachelor of Technology undergraduate student eager to expand expertise in the field. With a strong foundation in frontend development, I am dedicated to continuous learning and exploring new technologies to enhance user experiences and create innovative solutions.
 				</p>
 				
 				<div class="btn-box">
-					<a href="https://drive.google.com/file/d/1XaaqY0A6E8H6MaivQVDPGAeE8liBOsBd/view?usp=sharing" download="RahulCV.pdf" class="btn">Download CV</a>
+					<a href="https://drive.google.com/file/d/1o2-lW3jnjhAHUeV5DayzYWy5ZKURllXh/view?usp=sharing" download="RahulCV.pdf" class="btn">Download CV</a>
 					<a href="https://www.linkedin.com/in/rahul-singh-87675a221/?msg=1 " target="_blank" class="btn">Let's Talk</a>
 				</div>
 			</div>
@@ -57,8 +57,8 @@
 			</div>
 
 			<div class="about-content">
-				<h3> Frontend Developer&#128640</h3>
-				<p>As a dedicated Frontend Developer, I am driven by my passion for crafting captivating user experiences through innovative web design and development. With a keen eye for detail and a commitment to excellence, I thrive on the challenges of transforming creative concepts into functional, user-friendly interfaces. My journey in technology began during my undergraduate studies in Bachelor of Technology, where I developed a strong foundation in programming languages such as HTML, CSS, and JavaScript.		
+				<h3> Full Stack Developer&#128640</h3>
+				<p>As an accomplished Full Stack Developer specializing in the MERN stack, I am propelled by my passion for delivering comprehensive solutions that redefine user engagement and drive business growth. With a meticulous approach and a relentless pursuit of excellence, I thrive on the challenges of architecting and implementing end-to-end web applications that seamlessly integrate frontend and backend functionalities. My journey into technology began during my undergraduate studies in Bachelor of Technology, where I laid the foundation for my expertise in programming languages such as HTML, CSS, and JavaScript. Since then, I have immersed myself in mastering the MERN stack - MongoDB, Express.js, React, and Node.js - leveraging their combined power to create dynamic, scalable applications that push the boundaries of innovation. Through a combination of hands-on experience and continuous learning, I have honed my skills in frontend and backend development, ensuring that every project I undertake exceeds expectations and delivers tangible results.	
 				</p>
 
 				<div class="btn-box btns">
@@ -76,7 +76,25 @@
 				<div class="education-column">
 					<h3 class="title">Projects</h3>
 					<div class="education-box">
-						<a href="https://converso-ai.vercel.app/" target="_blank" style="display: block; color: white; text-decoration: none;">
+						<a href="https://real-estate-pro-b48n.onrender.com/" target="_blank" style="display: block; color: white; text-decoration: none;">
+						<div class="education-content">
+							<div class="content">
+								<div class="year"><i class='bx bxs-calendar' ></i>March 2024</div>
+								<h3 >MERN STACK REAL ESTATE WEB APPLICATION</h3>
+								<p >Description:
+									Developed a dynamic real estate web application utilizing the MERN stack – MongoDB, Express.js, React, and Node.js. This comprehensive course project equips with advanced skills in modern web development, catering to aspiring full-stack developers and React enthusiasts.
+									<br>
+									Key Learning Objectives: <br>
+									1. Advanced Authentication: Implemented JWT, Firebase, and Google OAuth for robust user authentication, ensuring secure and seamless access.<br>
+									2. Real-world CRUD Operations: Mastered Create, Read, Update, and Delete operations for property listings using MongoDB, enhancing data management proficiency.<br>
+									3. User-friendly Features: Enhanced user experience through intuitive functionalities like image uploads and property listing management, focusing on usability and accessibility.<br>
+									4. Advanced Search Functionality: Implemented cutting-edge search features to facilitate efficient property search, prioritizing user satisfaction and engagement.<br>
+									5. Deployment Made Easy: Acquired deployment skills by deploying the MERN real estate app effortlessly for free using the 'render' platform, emphasizing practical deployment knowledge.
+								</p>
+							</div>
+						</div>
+					</a>
+					<a href="https://converso-ai.vercel.app/" target="_blank" style="display: block; color: white; text-decoration: none;">
 						<div class="education-content">
 							<div class="content">
 								<div class="year"><i class='bx bxs-calendar' ></i>March 2024</div>
