--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									2. Real-world CRUD Operations: Mastered Create, Read, Update, and Delete operations for property listings using MongoDB, enhancing data management proficiency.<br>
 									3. User-friendly Features: Enhanced user experience through intuitive functionalities like image uploads and property listing management, focusing on usability and accessibility.<br>
 									4. Advanced Search Functionality: Implemented cutting-edge search features to facilitate efficient property search, prioritizing user satisfaction and engagement.<br>
-									5. Deployment Made Easy: Acquired deployment skills by deploying the MERN real estate app effortlessly for free using the 'render' platform, emphasizing practical deployment knowledge.
+									5. Deployment: Acquired deployment skills by deploying the MERN real estate app effortlessly for free using the 'render' platform, emphasizing practical deployment knowledge.
 								</p>
 							</div>
 						</div>
