updated project link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="education-column">
 					<h3 class="title">Projects</h3>
 					<div class="education-box">
-						<a href="https://real-estate-pro-b48n.onrender.com/" target="_blank" style="display: block; color: white; text-decoration: none;">
+						<a href="https://real-estate-pro-m4wj.onrender.com/" target="_blank" style="display: block; color: white; text-decoration: none;">
 						<div class="education-content">
 							<div class="content">
 								<div class="year"><i class='bx bxs-calendar' ></i>March 2024</div>
